# 5qln-foundation

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  flake.nix
.github/workflows/: verify.yml
codex/: CANONICAL_FORM.md
docs/: INDEX.md
interrogator/: README.md
kernel/: README.md
manifest/: manifest.json  manifest.schema.json
narrative/: README.md  inside-the-report.md  the-5qln-foundation-substrate.md  the-codex-became-physics.md
narrative/images/: HASHES.txt
phases/: PHASE_0_SEAL.md  PHASE_1_COMPILER.md  PHASE_2_AUDIT.md  PHASE_3_INTERROGATOR.md  PHASE_4_WRITE_GATE.md
predicates/: README.md
scripts/: seal-phase-0.sh
specs/: MASTER_ARCHITECTURE.md
tests/python/: test_verify_codex.py
tools/node/: verify-codex.mjs
tools/python/: verify_codex.py
tools/rust/: Cargo.toml
tools/rust/src/: main.rs
write-gate/: README.md
